Fixing widget options wrapping (Fixes #5606)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2209,6 +2209,11 @@ table td.actions-column {
 	white-space: nowrap;
 }
 
+table td.options {
+  white-space: nowrap;
+  overflow-x: hidden !important;
+}
+
 table.display thead th.sorting_disabled div.DataTables_sort_wrapper {
 	padding-right: 0;
 }
